Feature/17 edit profile (#18)
* fix: modify user update repo

* fix: modify user update repo

* fix: errors

* fix: modify migrations, add correction to separate migration

* fix: remove lint file

* docs: edit docs

* fix: return empty struct

* fix: update role

* fix: err

* fix: add access check and jwt middleware

* fix: refactor merged functions

* fix: remove not related changes

* fix: add check only admin can change the user role

* fix: check if expectedContextID empty

* fix: remove not needed imports

* fix: add test case for expectedContextID is empty
