# internal/handler/user.go
@@ -13,6 +13,7 @@ import (
 
 type UserService interface {
 	CreateUser(ctx context.Context, signup request.Signup, password string) (domain.User, error)
+	UpdateUser(ctx context.Context, req request.UpdateUser, userID uuid.UUID) (domain.User, error)
 	ResetPassword(ctx context.Context, req request.ResetPassword, requirePasswordReset bool) error
 	DeleteUser(ctx context.Context, id uuid.UUID) error
 	ValidateUser(ctx context.Context, signin request.Signin) (domain.User, error)
@@ -41,6 +42,55 @@ func GetUserHandler(service UserService) gin.HandlerFunc {
 		}
 
 		c.JSON(http.StatusOK, domainUserToResponse(user))
+	}
+}
+
+func UpdateUserHandler(userService UserService) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		if !AccessCheck(*c, c.GetString("user_id"), userIDParamKey) {
+			c.JSON(http.StatusForbidden, response.Error{Error: "access denied"})
+			return
+		}
+
+		var req request.UpdateUser
+
+		err := c.ShouldBind(&req)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, response.Error{Error: "error at binding request body"})
+			return
+		}
+
+		if req.Role != "" {
+			if !AccessCheck(*c, "", userIDParamKey) {
+				c.JSON(http.StatusForbidden, response.Error{Error: "access denied: not possible to change role"})
+				return
+			}
+		}
+
+		userID, err := uuid.Parse(c.Param(userIDParamKey))
+		if err != nil {
+			c.JSON(http.StatusBadRequest, response.Error{Error: "id format is not correct"})
+			return
+		}
+
+		user, err := userService.UpdateUser(c, req, userID)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, response.Error{Error: err.Error()})
+			return
+		}
+
+		resp := domainUserToResponse(user)
+		c.JSON(http.StatusOK, resp)
+	}
+}
+
+func domainUserToResponse(user domain.User) response.User {
+	return response.User{
+		ID:        user.ID,
+		Email:     user.Email,
+		Phone:     user.Phone,
+		CreatedAt: user.CreatedAt,
+		UpdatedAt: user.UpdatedAt,
 	}
 }
 
